# nvidia-demo

./: .cursorrules  CONTRIBUTING.md  Dockerfile  GR00T_INTERVIEW_STUDY_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  advanced_pipeline_config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
deployment/: README.md  grafana-datasource.yaml  ingress.yaml  kubernetes-production.yaml  kubernetes.yaml  network-policy.yaml  pod-security-standards.yaml  priority-class.yaml  prometheus-alerts.yaml  prometheus-config.yml  prometheus-service-monitor.yaml  resource-quota.yaml
deployment/aws/: README.md
deployment/aws/autoscaling/: README.md  hpa-gpu.yaml
deployment/aws/backup/: README.md  (+2 more)
deployment/gitops/: argocd-application.yaml  flux-app.yaml
deployment/helm/: Chart.yaml  values.yaml
deployment/on-prem/: README.md  backup-restore.yaml  cert-manager.yaml  disaster-recovery.md  hpa.yaml  ingress-nginx.yaml  kubernetes.yaml  logging-aggregation.yaml  monitoring-stack.yaml  node-configuration.yaml  ray-cluster.yaml  security-hardening.yaml  service-mesh-linkerd.yaml  storage-setup.sh  vault-integration.yaml
deployment/operators/: README.md  external-secrets-operator.yaml  falco-config.yaml  fluent-bit-operator.yaml  grafana-operator.yaml  health-check-library.yaml  install-operators.sh  jaeger-operator.yaml  karpenter-config.yaml  kube-bench-config.yaml  kubecost-config.yaml  kyverno-policies.yaml  opa-gatekeeper.yaml  opentelemetry-config.yaml  prometheus-operator.yaml  reloader-operator.yaml  sonobuoy-config.yaml  standard-logging.yaml  standard-metrics.yaml  trivy-scanning.yaml  velero-operator.yaml  vpa-config.yaml
docs/: PROJECT_ORGANIZATION.md  README.md  business-value.md  features.md
docs/api/: CLI.md  README.md
docs/architecture/: BASE_CLASSES.md  EXTENSIBILITY.md  OVERVIEW.md
docs/deployment/: PRODUCTION.md  README.md
docs/guides/: QUICKSTART.md
docs/integrations/: MLOPS_TOOLS.md  datasources.md  examples.md
docs/migration/: CONFIG_STRUCTURE.md  DEPRECATED_MODULES_REMOVED.md
docs/operations/: RUNBOOK.md  TROUBLESHOOTING.md
docs/performance/: gpu-optimizations.md
examples/: ORGANIZATION_SUMMARY.md  README.md  __init__.py  advanced_declarative_api.py  api_quick_start.py  basic_declarative_api.py  context_and_sql_example.py  create_mock_data.py  dataframe_api_example.py  declarative_yaml.py  fluent_api_example.py  groot_model_training.py  mlops_batch_inference.py  pipeline_config.yaml  reader_registry_example.py  test_cpu_examples.py  wandb_example.py  writer_registry_example.py
examples/advanced/: 01_full_pipeline.py  02_full_pipeline.yaml  __init__.py
examples/beginner/: 01_simple_python.py  02_simple_yaml.py  02_simple_yaml.yaml  __init__.py
examples/data/: README.md  mock_text.txt  test_calibration.yaml  test_config.yaml  test_data.h5  test_data.msgpack  test_data.pb  test_groot.jsonl  test_pointcloud.pcd  test_pointcloud.ply  test_robot.urdf
examples/test_output/: test_data.parquet
examples/yaml/: __init__.py  run_yaml.py
pipeline/: __init__.py  __version__.py  cli.py  config.py  core.py  exceptions.py  health.py
pipeline/api/: __init__.py  declarative.py  fluent.py  helpers.py  multipipeline.py  types.py
pipeline/config/: __init__.py  defaults.py  factory.py  ray_data.py  stage_config.py
pipeline/core/: __init__.py  execution.py  factory.py  lifecycle.py  orchestrator.py  registry.py  visualization.py
pipeline/datasources/: __init__.py  archive.py  base.py  binary.py  calibration.py  groot.py  hdf5.py  mcap.py  msgpack.py  pointcloud.py  protobuf.py  ros2bag.py  rosbag.py  urdf.py  velodyne.py  yaml_config.py
pipeline/dedup/: __init__.py  gpu_dedup.py  lsh.py  semantic.py  sequence_dedup.py
pipeline/integrations/: __init__.py  cosmos.py  feature_store.py  isaac_lab.py  lancedb.py  mlflow.py  model_registry.py  nemo.py  omniverse.py  openlineage.py  sql.py  wandb.py
pipeline/loaders/: __init__.py  formats.py  multimodal.py
pipeline/observability/: __init__.py  grafana.py  metrics.py  prometheus.py  resource_monitor.py
pipeline/server/: __init__.py  health_server.py
pipeline/stages/: __init__.py  base.py  completeness_validator.py  cross_modal_validator.py  data_sharding.py  distribution_analyzer.py  filters.py  instruction_grounding.py  modality_dropout.py  physics_validator.py  quality_scorer.py  sensor.py  sequence_normalizer.py  temporal_alignment.py  text.py  video.py
pipeline/synthetic/: __init__.py  generator.py  robotics.py  text.py  video.py
pipeline/training/: __init__.py  attention_masks.py  eval.py  integration.py  sequence_packing.py
pipeline/utils/: __init__.py  actor_utils.py  batch_processing.py  constants.py  context.py  data_types.py  decorators.py  domain_randomization.py  incremental.py  input_validation.py  nccl.py  profiling.py  resource_manager.py  retry.py  teleoperation.py  timeout.py
pipeline/visualization/: __init__.py  dashboard.py  renderer.py  video_generator.py
scripts/: backup-k8s.sh  backup.sh  deploy-aws.sh  deploy-on-prem.sh  deploy.sh  fix_datasource_metadata.py  fix_datasources.py  health-check.sh  lint-all.sh  refactor_dataframe.py  restore-k8s.sh  setup-dev.sh  setup-infrastructure.sh  setup-irsa.sh  smoke-tests.sh  terraform-init.sh  update-dependencies.sh  validate-config.sh  validate-k8s-config.sh
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: test_pipeline.py
(+123 files in other folders)
